--- a/index.html
+++ b/index.html
@@ -610,7 +610,11 @@
                     <div class="app-icon">⚡</div>
                     <div class="app-label">ETHER TECH & BLUEPRINTS</div>
                 </a>
-
+                <a href="#" onclick="launchApp('kompas.html', 'Ether Tech', '⚡')" class="app-card cat-fin">
+                    <div class="app-icon">🧭</div>
+                    <div class="app-label">NAVIGASI TAKTIS (Kompas & GPS)</div>
+                </a>
+                
             </div>
 
             <div style="text-align:center; padding: 20px; font-size:0.6rem; color:#666;">
@@ -992,3 +996,4 @@
     </script>
 </body>
 </html>
+
