--- a/index.html
+++ b/index.html
@@ -610,9 +610,13 @@
                     <div class="app-icon">⚡</div>
                     <div class="app-label">ETHER TECH & BLUEPRINTS</div>
                 </a>
-                <a href="#" onclick="launchApp('kompas.html', 'Ether Tech', '⚡')" class="app-card cat-fin">
+                <a href="#" onclick="launchApp('kompas.html', 'Kompas Taktis', '🧭')" class="app-card cat-fin">
                     <div class="app-icon">🧭</div>
                     <div class="app-label">NAVIGASI TAKTIS (Kompas & GPS)</div>
+                </a>
+                <a href="#" onclick="launchApp('petajalur.html', 'Peta jalur', '🌍')" class="app-card cat-fin">
+                    <div class="app-icon">🌍</div>
+                    <div class="app-label">BUAT PETA JALUR (navigasi manual)</div>
                 </a>
                 
             </div>
@@ -996,4 +1000,5 @@
     </script>
 </body>
 </html>
+
 
