--- a/petajalur.html
+++ b/petajalur.html
@@ -121,6 +121,11 @@
         <button onclick="addMarker('💧','Air')">💧</button>
         <button onclick="addMarker('💀','Bahaya')">💀</button>
         <button onclick="addMarker('🚩','Target')">🚩</button>
+        
+        <a href="bacapeta.html" style="text-decoration: none;">
+            <button style="background: #003344; color: #00ccff; border-color: #00ccff;">🗺️ BACA PETA</button>
+        </a>
+
         <button onclick="saveImage()" style="margin-left:auto; background:#00ff88; color:black;">💾 SIMPAN</button>
     </div>
 
