--- a/index.html
+++ b/index.html
@@ -618,6 +618,10 @@
                     <div class="app-icon">🌍</div>
                     <div class="app-label">BUAT PETA JALUR (navigasi manual)</div>
                 </a>
+                <a href="#" onclick="launchApp('DecentralizedID.html', 'Cetak Data Personal', '📄')" class="app-card cat-fin">
+                    <div class="app-icon">📄</div>
+                    <div class="app-label">Cetak Data Personal</div>
+                </a>
                 
             </div>
 
@@ -1000,5 +1004,6 @@
     </script>
 </body>
 </html>
+
 
 
