--- a/index.html
+++ b/index.html
@@ -622,6 +622,10 @@
                     <div class="app-icon">📄</div>
                     <div class="app-label">Cetak Data Personal</div>
                 </a>
+                <a href="#" onclick="launchApp('WAenigma.html', 'WAenigma', '✒️')" class="app-card cat-fin">
+                    <div class="app-icon">✒️</div>
+                    <div class="app-label">WAenigma</div>
+                </a>
                 
             </div>
 
@@ -1004,6 +1008,7 @@
     </script>
 </body>
 </html>
+
 
 
 
