--- a/index.html
+++ b/index.html
@@ -626,6 +626,10 @@
                     <div class="app-icon">✒️</div>
                     <div class="app-label">WAenigma</div>
                 </a>
+                <a href="#" onclick="launchApp('Picmigma.html', 'Picmigma', '🔍')" class="app-card cat-fin">
+                    <div class="app-icon">🔍</div>
+                    <div class="app-label">Picmigma</div>
+                </a>
                 
             </div>
 
@@ -1008,6 +1012,7 @@
     </script>
 </body>
 </html>
+
 
 
 
