--- a/Picmigma.html
+++ b/Picmigma.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAmigma - Image Vault v3.1</title>
+    <title>WAmigma - Image/File Vault v3.1</title>
     <style>
         /* TAMPILAN CYBERPUNK / INTEL */
         body {
@@ -109,7 +109,7 @@
 </head>
 <body>
 
-    <h1>WAmigma Image</h1>
+    <h1>WAmigma Image/File</h1>
     <div class="subtitle">SECURE IMAGE TRANSMISSION PROTOCOL v3.1</div>
 
     <div class="container">
@@ -255,3 +255,4 @@
     </script>
 </body>
 </html>
+
