--- a/index.html
+++ b/index.html
@@ -630,6 +630,14 @@
                     <div class="app-icon">🔍</div>
                     <div class="app-label">Picmigma</div>
                 </a>
+                <a href="#" onclick="launchApp('morsenigma.html', 'Morsenigma', '🔊')" class="app-card cat-fin">
+                    <div class="app-icon">🔊</div>
+                    <div class="app-label">Morsenigma</div>
+                </a>
+                <a href="#" onclick="launchApp('stegavault.html', 'Stegavault', '🗿')" class="app-card cat-fin">
+                    <div class="app-icon">🗿</div>
+                    <div class="app-label">Stegavault</div>
+                </a>
                 
             </div>
 
@@ -1012,6 +1020,7 @@
     </script>
 </body>
 </html>
+
 
 
 
