--- a/index.html
+++ b/index.html
@@ -638,6 +638,14 @@
                     <div class="app-icon">🗿</div>
                     <div class="app-label">Stegavault</div>
                 </a>
+                <a href="#" onclick="launchApp('sonicmind.html', 'Sonicmind', '🔊')" class="app-card cat-fin">
+                    <div class="app-icon">🔊</div>
+                    <div class="app-label">Sonicmind</div>
+                </a>
+                <a href="#" onclick="launchApp('sonicmindtransfer.html', 'Sonicmindtransfer', '🔊')" class="app-card cat-fin">
+                    <div class="app-icon">🔊</div>
+                    <div class="app-label">Sonic Mind Transfer</div>
+                </a>
                 
             </div>
 
@@ -1020,6 +1028,7 @@
     </script>
 </body>
 </html>
+
 
 
 
