--- a/index.html
+++ b/index.html
@@ -646,6 +646,10 @@
                     <div class="app-icon">🔊</div>
                     <div class="app-label">Sonic Mind Transfer</div>
                 </a>
+                <a href="#" onclick="launchApp('https://unorganically-flangeless-parthenia.ngrok-free.dev/', 'Genesis Chat', '💬')" class="app-card cat-human">
+                    <div class="app-icon">💬</div>
+                    <div class="app-label">Genesis Chat</div>
+                </a>
                 
             </div>
 
@@ -1028,6 +1032,7 @@
     </script>
 </body>
 </html>
+
 
 
 
