--- a/index.html
+++ b/index.html
@@ -650,6 +650,10 @@
                     <div class="app-icon">💬</div>
                     <div class="app-label">Genesis Chat</div>
                 </a>
+                <a href="#" onclick="launchApp('https://bacb00f856f2fab7-103-156-164-50.serveousercontent.com/', 'Genesis Lan Portal', '📂')" class="app-card cat-tech">
+                    <div class="app-icon">📂</div>
+                    <div class="app-label">Genesis Lan Portal</div>
+                </a>
                 
             </div>
 
@@ -1032,6 +1036,7 @@
     </script>
 </body>
 </html>
+
 
 
 
