--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                     <div class="app-icon">💬</div>
                     <div class="app-label">Genesis Chat</div>
                 </a>
-                <a href="#" onclick="launchApp('https://bacb00f856f2fab7-103-156-164-50.serveousercontent.com/', 'Genesis Lan Portal', '📂')" class="app-card cat-tech">
+        <a href="https://f6fcfaa491216f19-103-156-164-50.serveousercontent.com" target="_blank" class="app-card cat-tech">
                     <div class="app-icon">📂</div>
                     <div class="app-label">Genesis Lan Portal</div>
                 </a>
@@ -1036,6 +1036,7 @@
     </script>
 </body>
 </html>
+
 
 
 
