--- a/index.html
+++ b/index.html
@@ -650,9 +650,9 @@
                     <div class="app-icon">💬</div>
                     <div class="app-label">Genesis Chat</div>
                 </a>
-                <a href="#" onclick="launchApp('https://unorganically-flangeless-parthenia.ngrok-free.dev/', 'Genesis Lan Portal', '💬')" class="app-card cat-human">
+                <a href="#" onclick="launchApp('genesis manager.html', 'Genesis Lan Portal', '💬')" class="app-card cat-human">
                     <div class="app-icon">📂</div>
-                    <div class="app-label">Genesis Lan Portal</div>
+                    <div class="app-label">Genesis Local File Manager</div>
                 </a>
                 
             </div>
@@ -1036,6 +1036,7 @@
     </script>
 </body>
 </html>
+
 
 
 
