--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                     <div class="app-icon">💬</div>
                     <div class="app-label">Genesis Chat</div>
                 </a>
-                <a href="#" onclick="launchApp('genesis manager.html', 'Genesis Local File Manager', '💬')" class="app-card cat-human">
+                <a href="#" onclick="launchApp('genesis manager.html', 'Genesis Local File Manager', '📂')" class="app-card cat-human">
                     <div class="app-icon">📂</div>
                     <div class="app-label">Genesis Local File Manager</div>
                 </a>
@@ -1036,6 +1036,7 @@
     </script>
 </body>
 </html>
+
 
 
 
