--- a/index.html
+++ b/index.html
@@ -654,6 +654,15 @@
                     <div class="app-icon">📂</div>
                     <div class="app-label">Genesis Local File Manager</div>
                 </a>
+                <a href="#" onclick="launchApp('mtfzonetradingsystem.html', 'MTF Zone Trading System', '📈')" class="app-card cat-human">
+                    <div class="app-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width: 40px; height: 40px;">
+                    <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+                    <polyline points="17 6 23 6 23 12"></polyline>
+                </svg>
+                </div>
+                    <div class="app-label">MTF Zone Trading System</div>
+                </a>
                 
             </div>
 
@@ -1036,6 +1045,7 @@
     </script>
 </body>
 </html>
+
 
 
 
