--- a/mtfzonetradingsystem.html
+++ b/mtfzonetradingsystem.html
@@ -153,7 +153,7 @@
 </head>
 <body>
 
-    <a href="https://google.com" target="_blank" class="widget-wrapper">
+    <a href="https://nanansuh234.github.io/Sunda-Nuswantara-OS/54.%20Double%20Anchor%20System.html" target="_blank" class="widget-wrapper">
         
         <div class="left-panel">
             
@@ -310,4 +310,5 @@
         setInterval(updateData, 5000); // Data Market Sync
     </script>
 </body>
+
 </html>
