--- a/44. Gallery.html
+++ b/44. Gallery.html
@@ -131,23 +131,31 @@
     <div class="gallery-container">
         
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Pantai yang Indah">
-            <div class="overlay">Klik untuk Zoom</div>
+            <img src="https://drive.google.com/file/d/1_Cc5mWfXsgBpa5tub6qwCmp9-dK-pxAt/view?usp=sharing" alt="pic1">
+            <div class="overlay">pic1</div>
         </div>
 
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://images.unsplash.com/photo-1472214103451-9374bd1c798e?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Suasana Senja">
-            <div class="overlay">Senja</div>
+            <img src="https://drive.google.com/file/d/1UOB_jCZH1MgqnwU86ysdUaKqNyBn2_EH/view?usp=sharing" alt="pic2">
+            <div class="overlay">pic2</div>
         </div>
 
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://images.unsplash.com/photo-1501854140884-074cf27f731d?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Pegunungan Gelap">
-            <div class="overlay">Gunung</div>
+            <img src="https://drive.google.com/file/d/1eSnHNLgoAf67wQ0NkorwxyRpJ8zkbKVj/view?usp=sharing" alt="Pic3">
+            <div class="overlay">pic3</div>
         </div>
 
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Hutan Asri">
-            <div class="overlay">Alam Bebas</div>
+            <img src="https://drive.google.com/file/d/1PlARZnOovnZ4e17nOTjk6XQVAVs3U5eo/view?usp=sharing" alt="pic4">
+            <div class="overlay">pic4</div>
+        </div>
+            <div class="gallery-item" onclick="openModal(this)">
+            <img src="https://drive.google.com/file/d/17nrnBZmt0Fofbno21VWL9Vm3kvnQGCv5/view?usp=sharing" alt="pic5">
+            <div class="overlay">pic5</div>
+        </div>
+            <div class="gallery-item" onclick="openModal(this)">
+            <img src="https://drive.google.com/file/d/1jeM4KBNCTt3ZDy85kjbvirQA-oOQPeVv/view?usp=sharing" alt="pic6">
+            <div class="overlay">pic6</div>
         </div>
 
     </div>
@@ -186,4 +194,5 @@
     </script>
 
 </body>
+
 </html>
