--- a/44. Gallery.html
+++ b/44. Gallery.html
@@ -130,34 +130,74 @@
 
     <div class="gallery-container">
         
+  <body>
+
+    <h2>GALERI DOKUMENTASI</h2>
+
+    <div class="gallery-container">
+        
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://drive.google.com/file/d/1_Cc5mWfXsgBpa5tub6qwCmp9-dK-pxAt/view?usp=sharing" alt="pic1">
+            <img src="https://drive.google.com/uc?export=view&id=1_Cc5mWfXsgBpa5tub6qwCmp9-dK-pxAt" alt="pic1">
             <div class="overlay">pic1</div>
         </div>
 
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://drive.google.com/file/d/1UOB_jCZH1MgqnwU86ysdUaKqNyBn2_EH/view?usp=sharing" alt="pic2">
+            <img src="https://drive.google.com/uc?export=view&id=1UOB_jCZH1MgqnwU86ysdUaKqNyBn2_EH" alt="pic2">
             <div class="overlay">pic2</div>
         </div>
 
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://drive.google.com/file/d/1eSnHNLgoAf67wQ0NkorwxyRpJ8zkbKVj/view?usp=sharing" alt="Pic3">
+            <img src="https://drive.google.com/uc?export=view&id=1eSnHNLgoAf67wQ0NkorwxyRpJ8zkbKVj" alt="Pic3">
             <div class="overlay">pic3</div>
         </div>
 
         <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://drive.google.com/file/d/1PlARZnOovnZ4e17nOTjk6XQVAVs3U5eo/view?usp=sharing" alt="pic4">
+            <img src="https://drive.google.com/uc?export=view&id=1PlARZnOovnZ4e17nOTjk6XQVAVs3U5eo" alt="pic4">
             <div class="overlay">pic4</div>
         </div>
-            <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://drive.google.com/file/d/17nrnBZmt0Fofbno21VWL9Vm3kvnQGCv5/view?usp=sharing" alt="pic5">
+
+        <div class="gallery-item" onclick="openModal(this)">
+            <img src="https://drive.google.com/uc?export=view&id=17nrnBZmt0Fofbno21VWL9Vm3kvnQGCv5" alt="pic5">
             <div class="overlay">pic5</div>
         </div>
-            <div class="gallery-item" onclick="openModal(this)">
-            <img src="https://drive.google.com/file/d/1jeM4KBNCTt3ZDy85kjbvirQA-oOQPeVv/view?usp=sharing" alt="pic6">
+
+        <div class="gallery-item" onclick="openModal(this)">
+            <img src="https://drive.google.com/uc?export=view&id=1jeM4KBNCTt3ZDy85kjbvirQA-oOQPeVv" alt="pic6">
             <div class="overlay">pic6</div>
         </div>
 
+    </div>
+
+    <div id="myModal" class="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img class="modal-content" id="img01">
+        <div id="caption"></div>
+    </div>
+
+    <script>
+        var modal = document.getElementById("myModal");
+        var modalImg = document.getElementById("img01");
+        var captionText = document.getElementById("caption");
+
+        function openModal(element) {
+            var img = element.querySelector('img'); 
+            modal.style.display = "block";
+            modalImg.src = img.src; 
+            captionText.innerHTML = img.alt; 
+        }
+
+        function closeModal() {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+
+</body>
     </div>
 
     <div id="myModal" class="modal">
@@ -196,3 +236,4 @@
 </body>
 
 </html>
+
