--- a/index.html
+++ b/index.html
@@ -701,6 +701,11 @@
         </div>
     </div>
 </a>
+                <a href="#" onclick="launchApp('SMS.html', 'Inbox SMS', '📂')" class="app-card cat-human">
+                    <div class="app-icon">📂</div>
+                    <div class="app-label">Inbox SMS</div>
+                </a>
+                
             </div>
 
             <div style="text-align:center; padding: 20px; font-size:0.6rem; color:#666;">
