--- a/index.html
+++ b/index.html
@@ -705,6 +705,10 @@
                     <div class="app-icon">📂</div>
                     <div class="app-label">Inbox SMS</div>
                 </a>
+                <a href="#" onclick="launchApp('56. Nuswantara Hub.html', 'Inbox SMS', '👤')" class="app-card cat-human">
+                    <div class="app-icon">👤</div>
+                    <div class="app-label">Nuswantara Hub & Tools</div>
+                </a>
                 
             </div>
 
@@ -1087,6 +1091,7 @@
     </script>
 </body>
 </html>
+
 
 
 
