Update 56. Nuswantara Hub.html

--- a/56. Nuswantara Hub.html
+++ b/56. Nuswantara Hub.html
@@ -85,14 +85,20 @@
 
     <div class="grid-container">
 
-             </a>
-                <a href="#" onclick="launchApp('Pemahaman Bahasa Ai.html', 'Pemahaman Bahasa Ai', '⚛️')" class="app-card cat-fin">
-                    <div class="app-icon">⚛️</div><div class="app-label">Pemahaman Bahasa Ai</div>
-            </a>
-                <a href="#" onclick="launchApp('Sonic Resonance Scanner.html', 'Panel Deteksi Resonansi Suara', '📡')" class="app-card cat-fin">
-                    <div class="app-icon">📡</div><div class="app-label">Pemahaman Bahasa Ai</div>
-           </a>
-        
+                <a href="Pemahaman Bahasa Ai.html" class="card"> <div class="status-dot"></div>
+            <div class="card-icon">⚛️</div>
+            <div class="card-title">Pemahaman Bahasa Ai</div>
+            <div class="card-desc">
+                Panel pembelajaran dibalik bagaimana Ai merespon Bahasa Manusia dan Meresponnya kembali menjadi Bahasa.
             </div>
         </a>
+
+        <a href="Sonic Resonance Scanner.html" class="card"> <div class="status-dot"></div>
+            <div class="card-icon">📡</div>
+            <div class="card-title">Panel Deteksi Resonansi Suara</div>
+            <div class="card-desc">
+                Alat ini mendeteksi suara berdasarkan Prequensi, tidak semua perangkat memiliki Mic yang sensitif untuk merekap suara prequensi tinggi.
+            </div>
+        </a>
+
 
