Update 56. Nuswantara Hub.html

--- a/56. Nuswantara Hub.html
+++ b/56. Nuswantara Hub.html
@@ -101,4 +101,21 @@
             </div>
         </a>
 
+        <a href="Rusian Font Generate.html" class="card"> <div class="status-dot"></div>
+            <div class="card-icon">📝</div>
+            <div class="card-title">Rusian Font Generate</div>
+            <div class="card-desc">
+                Font Rusia untuk Pemahaman Faux Cyrillic.
+            </div>
+        </a>
+
+        <a href="Deutsch Font Generator.html" class="card"> <div class="status-dot"></div>
+            <div class="card-icon">📝</div>
+            <div class="card-title">Deutsch Font Generator</div>
+            <div class="card-desc">
+                Gaya Font Jerman (Umlaut & Eszett).
+            </div>
+        </a>
+
+
 
