Update Deutsch Font Generator.html

--- a/Deutsch Font Generator.html
+++ b/Deutsch Font Generator.html
@@ -101,7 +101,7 @@
 
 <div class="container">
     <div class="eagle"></div>
-    <h1>DEUTSCH GENERATOR</h1>
+    <h1>DEUTSCH FONT GENERATOR</h1>
 
     <div class="input-group">
         <label>INPUT TEXT (NORMAL):</label>
@@ -192,4 +192,5 @@
 </script>
 
 </body>
+
 </html>
