--- a/index.html
+++ b/index.html
@@ -709,6 +709,9 @@
                     <div class="app-icon">👤</div>
                     <div class="app-label">Nuswantara Hub & Tools</div>
                 </a>
+                    <a href="" onclick="launchApp('Bio Medic.html', 'Realitas & Masa Depan', '💊')" class="app-card cat-future">
+                    <div class="app-icon">💊</div><div class="app-label">Bio Medic Hacking</div>
+                </a>
                 
             </div>
 
@@ -1091,6 +1094,7 @@
     </script>
 </body>
 </html>
+
 
 
 
