Update Jangkar Rutinitas Wajib Sesuai Wanci.html

--- a/Jangkar Rutinitas Wajib Sesuai Wanci.html
+++ b/Jangkar Rutinitas Wajib Sesuai Wanci.html
@@ -180,7 +180,7 @@ const anchors = [
         {
             start: 17, end: 19,
             title: "RECHARGE (MAKAN MALAM)",
-            desc: "Makan malam terakhir. Menu berkuah/hangat. Porsi sedang. Stop makan berat setelah jam 19.00.",
+            desc: "Makan malam terakhir. Menu berkuah/hangat. Porsi sedang. Stop makan berat setelah jam 4.60 malam.",
             reason: "Ginjal menyimpan esensi energi. Jangan bebani dengan pencernaan berat saat mau istirahat."
         },
         {
@@ -267,4 +267,5 @@ const anchors = [
 
 </script>
 </body>
+
 </html>
