Update Tips Makan Sehat Rekomendasi Ksatria Nuswantara.html

--- a/Tips Makan Sehat Rekomendasi Ksatria Nuswantara.html
+++ b/Tips Makan Sehat Rekomendasi Ksatria Nuswantara.html
@@ -318,7 +318,7 @@
         logic: "Usus & Hati sedang cuci darah. Jangan masukan sampah apapun!",
         good: [{name: "TIDUR", note: "Nutrisi terbaik saat ini"}, {name: "Air Putih (Bangun Tidur)", note: "Bilas racun"}],
         bad: [{name: "SEMUA MAKANAN", note: "Merusak proses detoks"}, {name: "Gadget", note: "Radiasi"}],
-        next: "Sarapan (Lambung 07:00)"
+        next: "Sarapan (Lambung 04:60 pagi)"
     };
     
     function updateContent() {
@@ -394,3 +394,4 @@
 </script>
 </body>
 </html>
+
