--- a/index.html
+++ b/index.html
@@ -712,6 +712,11 @@
                     <a href="" onclick="launchApp('Bio Medic.html', 'Realitas & Masa Depan', '💊')" class="app-card cat-future">
                     <div class="app-icon">💊</div><div class="app-label">Bio Medic Hacking</div>
                 </a>
+
+                <a href="" onclick="launchApp('Khusus Insan Dewasa Baligh.html', 'Khusus Insan Dewasa Baligh', '🧬')" class="app-card cat-future">
+                    <div class="app-icon">❤️‍🔥</div>
+                    <div class="app-label">Khusus Insan Dewasa Baligh</div>
+                </a>
                 
             </div>
 
@@ -1094,6 +1099,7 @@
     </script>
 </body>
 </html>
+
 
 
 
