--- a/mtfzonetradingsystem.html
+++ b/mtfzonetradingsystem.html
@@ -165,7 +165,7 @@
 
                 <div class="sub-header">
                     <div>
-                        <div class="section-label-main">MARKET OVERVIEW</div>
+                        <div class="section-label-main">MARKET OVERVIEW XAUUSD</div>
                         <div id="lastSync" class="last-sync-label">Sync: --:-- WIB</div>
                     </div>
                     <div id="val-trend" class="trend-badge">---</div>
@@ -312,3 +312,4 @@
 </body>
 
 </html>
+
